Completed CSV file.

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "d5bdc47e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "bfbe7def",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "e49429d2",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "0aae96e1",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,7 @@
       "gat ly\n",
       "parvatsar in\n",
       "punta arenas cl\n",
-      "saint george bm\n",
-      "<class 'range'>\n"
+      "saint george bm\n"
      ]
     }
    ],
@@ -60,9 +59,448 @@
     "#print(list(coordinates))\n",
     "for coordinate in coordinates:\n",
     "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
-    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)\n",
-    "print(range)"
+    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e7150105",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the requests library.\n",
+    "import requests\n",
+    "\n",
+    "# Import the API key.\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dff2b600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "# Should be fine to have this information displayed. Do NOT print. Will use gitignore later on config text file.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c55becd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "# Best practice to delete prints of URLs once finished using them. \n",
+    "city_url = url + \"&q=\" + \"Boston\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "83adbf6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bece2ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Shows response code.\n",
+    "city_weather.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7839a663",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [404]>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "# Misspelled Boston on purpose to witness Response 404.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f70f4a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "827a10bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":601,\"main\":\"Snow\",\"description\":\"snow\",\"icon\":\"13d\"}],\"base\":\"stations\",\"main\":{\"temp\":20.37,\"feels_like\":11.48,\"temp_min\":16.95,\"temp_max\":22.75,\"pressure\":1014,\"humidity\":50},\"visibility\":10000,\"wind\":{\"speed\":7,\"deg\":11,\"gust\":17},\"snow\":{\"1h\":0.51},\"clouds\":{\"all\":20},\"dt\":1643578055,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1643543992,\"sunset\":1643579703},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "# Provides preview of JSON data.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f4f6c61d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 601,\n",
+       "   'main': 'Snow',\n",
+       "   'description': 'snow',\n",
+       "   'icon': '13d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 20.37,\n",
+       "  'feels_like': 11.48,\n",
+       "  'temp_min': 16.95,\n",
+       "  'temp_max': 22.75,\n",
+       "  'pressure': 1014,\n",
+       "  'humidity': 50},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 7, 'deg': 11, 'gust': 17},\n",
+       " 'snow': {'1h': 0.51},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1643578055,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1643543992,\n",
+       "  'sunset': 1643579703},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f9ee2071",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "# Boston is misspelled on purpose again. \n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "73f31ae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "# Make sure we get a valid response before retrieving data.\n",
+    "# Conditional expression to evaluate whether the status code is 200.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6b0df548",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 19.63,\n",
+       "  'feels_like': 10.6,\n",
+       "  'temp_min': 16.25,\n",
+       "  'temp_max': 22.21,\n",
+       "  'pressure': 1013,\n",
+       "  'humidity': 54},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 7, 'deg': 355, 'gust': 18.01},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1643579140,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1643543992,\n",
+       "  'sunset': 1643579703},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bec484b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the JSON data.\n",
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6e35cea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 2,\n",
+       " 'id': 2013408,\n",
+       " 'country': 'US',\n",
+       " 'sunrise': 1643543992,\n",
+       " 'sunset': 1643579703}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sunrise and sunset is the time recorded in seconds.\n",
+    "boston_data['sys']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e6d85daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'US'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data['sys']['country']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "41d8e7cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1643579140"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Important to figure out what values are reported in/formatted. \n",
+    "boston_data['dt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "fce0d8a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 22.21 54 20 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Units for temp are in F, humidity and clouds are %, and wind is in mph.\n",
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4abe688d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-01-30 21:45:40'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datetime library.\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17c53e36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
