--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "d5bdc47e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "bfbe7def",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "e49429d2",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "0aae96e1",
    "metadata": {},
    "outputs": [
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "e7150105",
+   "execution_count": 5,
+   "id": "911eaa47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "dff2b600",
+   "execution_count": 6,
+   "id": "7c3984b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "c55becd6",
+   "execution_count": 7,
+   "id": "e72388ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "83adbf6e",
+   "execution_count": 8,
+   "id": "91f17519",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "bece2ce0",
+   "execution_count": 9,
+   "id": "a99479c1",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "200"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "7839a663",
+   "execution_count": 10,
+   "id": "f588d321",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,8 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "f70f4a58",
+   "execution_count": 11,
+   "id": "3b9575e4",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,17 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "827a10bd",
+   "execution_count": 12,
+   "id": "aef97d6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":601,\"main\":\"Snow\",\"description\":\"snow\",\"icon\":\"13d\"}],\"base\":\"stations\",\"main\":{\"temp\":20.37,\"feels_like\":11.48,\"temp_min\":16.95,\"temp_max\":22.75,\"pressure\":1014,\"humidity\":50},\"visibility\":10000,\"wind\":{\"speed\":7,\"deg\":11,\"gust\":17},\"snow\":{\"1h\":0.51},\"clouds\":{\"all\":20},\"dt\":1643578055,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1643543992,\"sunset\":1643579703},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02n\"}],\"base\":\"stations\",\"main\":{\"temp\":24.12,\"feels_like\":16.07,\"temp_min\":19.69,\"temp_max\":28.24,\"pressure\":1029,\"humidity\":61},\"visibility\":10000,\"wind\":{\"speed\":6.91,\"deg\":100},\"clouds\":{\"all\":20},\"dt\":1643668226,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1643630333,\"sunset\":1643666182},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,42 +219,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "f4f6c61d",
+   "execution_count": 13,
+   "id": "7d02bc53",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 601,\n",
-       "   'main': 'Snow',\n",
-       "   'description': 'snow',\n",
-       "   'icon': '13d'}],\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 20.37,\n",
-       "  'feels_like': 11.48,\n",
-       "  'temp_min': 16.95,\n",
-       "  'temp_max': 22.75,\n",
-       "  'pressure': 1014,\n",
-       "  'humidity': 50},\n",
+       " 'main': {'temp': 24.12,\n",
+       "  'feels_like': 16.07,\n",
+       "  'temp_min': 19.69,\n",
+       "  'temp_max': 28.24,\n",
+       "  'pressure': 1029,\n",
+       "  'humidity': 61},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 7, 'deg': 11, 'gust': 17},\n",
-       " 'snow': {'1h': 0.51},\n",
+       " 'wind': {'speed': 6.91, 'deg': 100},\n",
        " 'clouds': {'all': 20},\n",
-       " 'dt': 1643578055,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'dt': 1643668226,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1643543992,\n",
-       "  'sunset': 1643579703},\n",
+       "  'sunrise': 1643630333,\n",
+       "  'sunset': 1643666182},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "f9ee2071",
+   "execution_count": 14,
+   "id": "9c6c145f",
    "metadata": {},
    "outputs": [
     {
@@ -291,8 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "73f31ae8",
+   "execution_count": 15,
+   "id": "606f4a68",
    "metadata": {},
    "outputs": [
     {
@@ -317,8 +316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "6b0df548",
+   "execution_count": 16,
+   "id": "7c76d8f7",
    "metadata": {},
    "outputs": [
     {
@@ -328,30 +327,30 @@
        " 'weather': [{'id': 801,\n",
        "   'main': 'Clouds',\n",
        "   'description': 'few clouds',\n",
-       "   'icon': '02d'}],\n",
+       "   'icon': '02n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 19.63,\n",
-       "  'feels_like': 10.6,\n",
-       "  'temp_min': 16.25,\n",
-       "  'temp_max': 22.21,\n",
-       "  'pressure': 1013,\n",
-       "  'humidity': 54},\n",
+       " 'main': {'temp': 24.12,\n",
+       "  'feels_like': 16.07,\n",
+       "  'temp_min': 19.69,\n",
+       "  'temp_max': 28.24,\n",
+       "  'pressure': 1029,\n",
+       "  'humidity': 61},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 7, 'deg': 355, 'gust': 18.01},\n",
+       " 'wind': {'speed': 6.91, 'deg': 100},\n",
        " 'clouds': {'all': 20},\n",
-       " 'dt': 1643579140,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'dt': 1643668226,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1643543992,\n",
-       "  'sunset': 1643579703},\n",
+       "  'sunrise': 1643630333,\n",
+       "  'sunset': 1643666182},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,8 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "bec484b2",
+   "execution_count": 17,
+   "id": "970b583f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,21 +375,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "6e35cea9",
+   "execution_count": 18,
+   "id": "05bd20ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'type': 2,\n",
-       " 'id': 2013408,\n",
+       "{'type': 1,\n",
+       " 'id': 3486,\n",
        " 'country': 'US',\n",
-       " 'sunrise': 1643543992,\n",
-       " 'sunset': 1643579703}"
+       " 'sunrise': 1643630333,\n",
+       " 'sunset': 1643666182}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,8 +401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "e6d85daa",
+   "execution_count": 19,
+   "id": "bab69dbd",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +411,7 @@
        "'US'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,17 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "41d8e7cb",
+   "execution_count": 20,
+   "id": "ae02c102",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1643579140"
+       "1643668226"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,15 +444,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "fce0d8a4",
+   "execution_count": 21,
+   "id": "e91354b9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 22.21 54 20 7\n"
+      "42.3584 -71.0598 28.24 61 20 6.91\n"
      ]
     }
    ],
@@ -470,17 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "4abe688d",
+   "execution_count": 22,
+   "id": "1b77222e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-01-30 21:45:40'"
+       "'2022-01-31 22:30:26'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,11 +495,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17c53e36",
+   "execution_count": 24,
+   "id": "852b968d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'01/31/22'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
   }
  ],
  "metadata": {
